[package]
name = "sapi"
version = "0.2.0"
authors = ["bowrocker <jon.anderson@joyent.com>"]
edition = "2018"

[dependencies.reqwest]
version = "0.9.20"
features = ["hyper-011"]
[dependencies]
miniz_oxide = "= 0.2.3"
miniz_oxide_c_api = "= 0.2.2"
flate2 = "= 1.0.9"
joyent-rust-utils = { git = "https://github.com/joyent/rust-utils" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_urlencoded = "0.5"
slog = { version = "2.4.1", features = [ "max_level_trace" ] }
slog-stdlog = "3"
uuid = "0.7"
unicode-normalization = "=0.1.5"

[dev-dependencies]
slog-term = "2.4.0"
