[package]
name = "sapi"
version = "0.2.0"
authors = ["bowrocker <jon.anderson@joyent.com>", "rui@joyent.com"]
edition = "2018"

[dependencies.reqwest]
version = "0.9.20"
features = ["hyper-011"]
[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
slog = { version = "2.4.1", features = [ "max_level_trace" ] }
slog-stdlog = "3"
unicode-normalization = "=0.1.5"

[dev-dependencies]
slog-term = "2.4.0"
